# OS

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  bochsrc-gdb.disk  bochsrc.disk  问题.md
.codex/environments/: environment.toml
boot/: CMakeLists.txt  loader.asm  mbr.asm
boot/include/: boot.inc
device/: CMakeLists.txt  time.c  time.cpp  time.h
device/ahci/: ahci.cpp
device/ata_pio/: ata_pio.cpp  init.cpp  intr.cpp  part.cpp  regression.cpp
device/block/: device.cpp  partition.cpp
device/console/: console.cpp
device/ide/: ide.cpp  init.cpp  intr.cpp  part.cpp  regression.cpp
device/include/: keyboard.h  time.h
device/ioqueue/: ioqueue.cpp
device/keyboard/: iobuf.cpp  keyboard.c  keyboard.h
device/pci/: mmio.cpp  pci.cpp
device/storage/: init.cpp  regression.cpp
device/time/: time.c  time.cpp  time.h
doc/: README.md  latexmkrc  main.tex  min.tex
doc/chapters/: 00-preface.tex  01-boot.tex  02-memory.tex  03-sampler.tex
doc/style/: custom.sty
doc/style/pygments/: clionlight.pygstyle
include/: stdint.h
kernel/: CMakeLists.txt  init.c  init.cpp  init.h  initialization.cpp  interrupt.asm  interrupt.c  interrupt.h  kernel.asm  kernel.cpp  main.c  main.cpp  memory.cpp  start.cpp  wexe.cpp
kernel/crt/: start.asm
kernel/include/: assert.h  bitmap  cdefs.h  global.h  interrupt.h  io.h  memory  os.h  stdint.h  stdio.h  string.h  string_impl.h
kernel/module/: CMakeLists.txt  bitmap.cppm  list.cppm  memory.cppm  optional.cppm  ref.cpp  utility.cppm
kernel/module/filesystem/: dir.cpp  dir_struct.cpp  file.cpp  file_manager.cpp  file_struct.cpp  flags.cpp  fs.cpp  init.cpp  inode.cpp  inode_free.cpp  inode_structure.cpp  path.cpp  path_struct.cpp  stat_struct.cpp  super_block.cpp  sysfunc.cpp  utility.cpp
kernel/module/memory/: init.cppm  memory.cppm  pgtable.cppm  pool.cppm  utilty.cppm
kernel/module/memory/alloc/: alloc.cpp  arena.cpp  free.cpp  init.cppm  malloc.cpp  new.cpp  pool.cppm  sysnew.cpp
kernel/module/program/: CMakeLists.txt  cat.cpp  libstdcxx.cpp  program_arg.cpp  program_no_arg.cpp  stdcxx.cpp
kernel/module/program/lib/: container.cpp  io.cpp  os.cpp  print.cpp
kernel/module/shell/: builtin.cpp  shell.cpp
kernel/module/std/: algorithm.cpp  array.cpp  bit.cpp  bufer.cpp  buffer.cpp  scope.cpp  std.cpp  string.cpp  vector.cpp
kernel/module/std/format/: array.cpp  string.cpp  vector.cpp
kernel/module/thread/: exec.cppm  init.cppm  list.cppm  pid.cpp  process.cpp  stack.cppm  switch.asm  switch.h  thread.cppm  utility.cppm
kernel/module/thread/sync/: execution.cpp  init.cpp  list.cppm  list_node.cppm  lock_guard.cpp  mutex.cppm  mutux.cppm  schedule.cpp  semaphore.cppm  sleep.cpp  sync.cpp  task.cpp  tss.cpp
kernel/module/user/: exec.cpp  exit.cpp  fork.cpp  format.cpp  getpid.cpp  printf.cpp  ps.cpp  std.cpp  syscall.cpp  syscall_init.cpp  utility.cpp  wait.cpp  wait_exit.cpp  write.cpp
kernel/src/: assert.c  assert.h  boot_marker.c  io.h  os.asm  os.c  os.h  stdint.h  stdio.asm  stdio.h  string.c  string.h  string_impl.c
kernel/test/: CMakeLists.txt  filesystem.cpp
scripts/: bochs_debug.py  qemu_debug.py
tests/: CMakeLists.txt
tests/boot/: CMakeLists.txt  check_image_layout.py
tests/cmake/: BootTests.cmake  SystemTests.cmake
tests/system/: CMakeLists.txt
tests/system/disk/: CMakeLists.txt
tests/system/disk/scripts/: prepare_disk_images.py
tests/system/fs/: CMakeLists.txt
tests/system/fs/programs/: fs_test_runner.cpp
tests/system/fs/scripts/: prepare_fs_images.py  require_success.py
userprog/: CMakeLists.txt  tss.cpp
